--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"   
+    "dev": "nodemon index.js"
   },
   "author": "Flexo",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "mongoose": "^6.4.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
